# AskRx

./: .env.example  .gitignore  AskRx.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
backend/agent/: cli.py  graph.py  prompts.py  tools.py
backend/embedding/: embed.py
backend/pipeline/: backfill_dosage_route.py  chunker.py  dedup.py  downloader.py  parser.py  pipeline.py  rxnorm.py
backend/retrieval/: dense.py  hybrid.py  query.py  rxnorm_query.py  text_search.py
db/: schema.sql
tests/: conftest.py  test_chunker.py  test_dedup.py  test_dense_search.py  test_graph.py  test_hybrid.py  test_pipeline.py  test_rxnorm.py  test_rxnorm_query.py  test_text_search.py  test_tools.py
tests/ingestion/: test_downloader.py
