[project]
name = "asrx"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain-ollama>=0.2",
    "langchain-google-genai>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["backend", "backend.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits real external APIs — run with pytest -m integration",
    "db: requires a running Postgres+pgvector instance — run with pytest -m db",
]
